# menoo

./: .gitignore  COMMIT_MESSAGES.md  DEPLOYMENT.md  IMPLEMENTATION.md  README.md  RECIPE_MODEL.md  STRATEGY.md  menoo.db  package-lock.json  render-build.sh  render-start.sh  render.yaml  start.sh
.github/workflows/: backend-ci.yml  frontend-ci.yml
_frontend/: .gitignore  README.md  index.html  package.json  playwright.config.ts  vitest.config.ts
_frontend/e2e/: integration-workflows.spec.ts  recipes.spec.ts  suggestions.spec.ts
_frontend/src/: app.tsx  main.test.tsx  main.tsx  test-error-boundary.tsx
backend/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  deploy.sh  menoo.db-shm  menoo.db-wal  pyproject.toml  tox.ini
backend/app/: __init__.py  config.py  database.py  dependencies.py  events.py  logging.py  main.py
backend/app/controllers/: __init__.py  ingredients.py  recipes.py  suggestions.py
backend/app/core/: __init__.py  marvin_config.py
backend/app/enums/: __init__.py  recipe.py
backend/app/models/: __init__.py  base.py  ingredient.py  recipe.py  recipe_ingredient.py
backend/app/repositories/: __init__.py  ingredient_repository.py  recipe_ingredient_repository.py  recipe_repository.py  suggestion_repository.py
backend/app/schemas/: __init__.py  ingredient.py  recipe.py  suggestion.py
backend/app/schemas/core/: __init__.py  ingredient.py  recipe.py
backend/app/schemas/requests/: __init__.py  ingredient.py  recipe.py  suggestion.py
backend/app/schemas/responses/: __init__.py  ingredient.py  recipe.py  suggestion.py
backend/app/services/: __init__.py  ingredient_service.py  recipe_service.py  suggestion_service.py
backend/app/static/: .gitkeep
backend/migrations/: env.py
backend/migrations/versions/: 20250115_adopt_recipe_schema.py  20251116_initial_schema.py
backend/tests/: conftest.py  test_ingredient_service.py
backend/tests/fixtures/: factories.py
backend/tests/integration/: test_ingredient_api.py  test_live_marvin.py  test_suggestion_api.py
backend/tests/unit/test_core/: test_marvin_config.py
backend/tests/unit/test_repositories/: test_ingredient_repository.py  test_recipe_repository.py
backend/tests/unit/test_schemas/: __init__.py  test_ingredient_schemas.py  test_suggestion_schemas.py
backend/tests/unit/test_services/: test_ingredient_service.py  test_marvin_recipe_model.py  test_recipe_service.py  test_suggestion_service.py
docs/: chakra-ui-audit.md  llms-full.txt  ui-theming.md
frontend/: .eslintrc.cjs  REPLACE_CHAKRA_COMPONENTS_PLAN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: blank-screen.spec.ts  ingredients.spec.ts  integration-workflows.spec.ts  recipes.spec.ts  smoke.spec.ts
test/: marvin.db
(+216 files in other folders)
